# snowflake-mapper

./: .gitignore  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml
src/: main.rs  snowflake-tables.ts
typings/: index.d.ts
